css: small footer fix on mobile

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -154,6 +154,7 @@ main {
       position: relative;
       text-align: center;
       border-top: 1px solid $grey;
+      margin-top: 2rem;
     }
   }
 }
